--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
+    "@rushstack/eslint-config": "^4.0.2",
     "@storybook/addon-essentials": "^8.4.1",
     "@storybook/addon-interactions": "^8.4.1",
     "@storybook/addon-onboarding": "^8.4.1",
@@ -62,9 +63,11 @@
     "@storybook/react": "^8.4.1",
     "@storybook/react-webpack5": "^8.4.1",
     "@storybook/test": "^8.4.1",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-storybook": "^0.10.2",
     "prop-types": "^15.8.1",
     "storybook": "^8.4.1",
     "webpack": "^5.96.1"
-  }
+  },
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
