--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "@emotion/styled": "^11.13.0",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.6",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-popover": "1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@radix-ui/themes": "^3.1.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
