--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto-condensed": "^5.1.0",
     "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.6",
     "@radix-ui/colors": "^3.0.0",
