--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
         "@fontsource/roboto-condensed": "^5.1.0",
         "@mui/joy": "^5.0.0-beta.48",
         "@mui/material": "^6.1.6",
+        "@mui/x-date-pickers": "^7.22.2",
         "@radix-ui/colors": "^3.0.0",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-form": "^0.1.0",
         "@radix-ui/react-icons": "^1.3.1",
         "@radix-ui/react-popover": "1.1.2",
+        "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-tooltip": "^1.1.3",
         "@radix-ui/themes": "^3.1.4",
         "@testing-library/jest-dom": "^5.17.0",
@@ -25,7 +28,9 @@
         "@types/node": "^16.18.119",
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
+        "@use-funnel/react-router-dom": "^0.0.7",
         "classnames": "^2.5.1",
+        "date-fns": "^2.29.2",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^9.1.0",
         "prettier": "^3.3.3",
