--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "prettier": "^3.3.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.53.2",
         "react-icons": "^5.3.0",
         "react-scripts": "5.0.1",
         "styled-components": "^6.1.13",
