유저 정보입력 step별 페이지 작성 및 role에 따른 Funnel분기 구현
디자인 미완

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "type": "module",
     "private": true,
     "dependencies": {
+        "@chatscope/chat-ui-kit-react": "^2.0.3",
+        "@chatscope/chat-ui-kit-styles": "^1.4.0",
         "@coreui/icons": "^3.0.1",
         "@coreui/icons-react": "^2.3.0",
         "@emotion/react": "^11.13.3",
