빌드 관련 설정 추가
rollup 패키지 추가 및 빌드 스크립트 추가
package.json 파일 수정 - main , module (패키지 진입정) 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,9 +12,16 @@
         "module": "esnext",
         "moduleResolution": "node",
         "resolveJsonModule": true,
-        "isolatedModules": true,
+        // tsc를 사용해 .js 파일이 아닌 .d.ts 파일이 생성되었는지 확인합니다.
+        "declaration": true,
+        "emitDeclarationOnly": true,
         "noEmit": true,
-        "jsx": "react-jsx"
+        // Babel이 TypeScript 프로젝트의 파일을 안전하게 트랜스파일할 수 있는지 확인합니다.
+        "isolatedModules": true,
+        "jsx": "react-jsx",
+        "outDir": "dist",
+        "sourceMap": true,
     },
-    "include": ["src"]
+    "include": ["src/components/*.tsx", "src/components/index.ts", "src/components/*.ts"],
+    "exclude": ["src/components/*.stories.*", "dist", "node_modules"]
 }
