--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
     "name": "web_component",
     "version": "0.1.0",
     "type": "module",
+    "main": "dist/cjs/index.js",
+    "module": "dist/esm/index.js",
+    "types": "dist/esm/index.d.ts",
+    "files": [
+        "dist"
+    ],
     "private": true,
-    "dependencies": {
+    "peerDependencies": {
         "@chatscope/chat-ui-kit-react": "^2.0.3",
         "@chatscope/chat-ui-kit-styles": "^1.4.0",
         "@coreui/icons": "^3.0.1",
@@ -23,32 +29,24 @@
         "@radix-ui/react-select": "^2.1.2",
         "@radix-ui/react-tooltip": "^1.1.3",
         "@radix-ui/themes": "^3.1.4",
-        "@sendbird/uikit-react": "^3.15.8",
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
-        "@types/node": "^16.18.119",
-        "@types/react": "^18.3.12",
-        "@types/react-dom": "^18.3.1",
         "@use-funnel/react-router-dom": "^0.0.7",
         "classnames": "^2.5.1",
-        "date-fns": "^2.29.2",
-        "eslint": "^8.57.1",
-        "eslint-config-prettier": "^9.1.0",
-        "prettier": "^3.3.3",
+        "date-fns": "^4.1.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.53.2",
         "react-icons": "^5.3.0",
-        "react-scripts": "5.0.1",
         "styled-components": "^6.1.13",
-        "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
-        "build": "react-scripts build",
+        "build": "rollup -c",
+        "watch": "rollup -cw",
+        "publish": "cross-env BABEL_ENV=development babel src/components -d dist --extensions .tsx,.ts,.es6 --presets=@babel/preset-react,@babel/preset-env,@babel/preset-typescript",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "storybook": "storybook dev -p 6006",
@@ -74,7 +72,16 @@
         ]
     },
     "devDependencies": {
+        "@babel/cli": "^7.25.9",
+        "@babel/core": "^7.26.0",
+        "@babel/preset-env": "^7.26.0",
+        "@babel/preset-react": "^7.25.9",
+        "@babel/preset-typescript": "^7.26.0",
         "@chromatic-com/storybook": "^3.2.2",
+        "@rollup/plugin-babel": "^6.0.4",
+        "@rollup/plugin-commonjs": "^28.0.1",
+        "@rollup/plugin-node-resolve": "^15.3.0",
+        "@rollup/plugin-typescript": "^12.1.1",
         "@rushstack/eslint-config": "^4.0.2",
         "@storybook/addon-essentials": "^8.4.1",
         "@storybook/addon-interactions": "^8.4.1",
@@ -84,11 +91,29 @@
         "@storybook/react": "^8.4.1",
         "@storybook/react-webpack5": "^8.4.1",
         "@storybook/test": "^8.4.1",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.119",
+        "@types/react": "^18.3.12",
+        "@types/react-dom": "^18.3.1",
+        "autoprefixer": "^10.4.20",
+        "cross-env": "^7.0.3",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-storybook": "^0.10.2",
+        "install": "^0.13.0",
+        "npm": "^10.9.0",
+        "postcss-import": "^16.1.0",
         "prop-types": "^15.8.1",
+        "react-scripts": "5.0.1",
+        "rollup": "^4.27.0",
+        "rollup-plugin-dts": "^6.1.1",
+        "rollup-plugin-peer-deps-external": "^2.2.4",
+        "rollup-plugin-postcss": "^4.0.2",
         "storybook": "^8.4.1",
-        "webpack": "^5.96.1"
+        "tslib": "^2.8.1",
+        "webpack": "^5.96.1",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^9.1.0",
+        "prettier": "^3.3.3"
     },
     "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
