채팅 컴포넌트 작성 중
1. 메시지 리스트 작성
2. 채팅 리스트 작성
3. 메시지 헤더

--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
         "react-hook-form": "^7.53.2",
         "react-icons": "^5.3.0",
         "styled-components": "^6.1.13",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "@toss/react": "^1.8.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -97,11 +98,14 @@
         "@types/react-dom": "^18.3.1",
         "autoprefixer": "^10.4.20",
         "cross-env": "^7.0.3",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-storybook": "^0.10.2",
         "install": "^0.13.0",
         "npm": "^10.9.0",
         "postcss-import": "^16.1.0",
+        "prettier": "^3.3.3",
         "prop-types": "^15.8.1",
         "react-scripts": "5.0.1",
         "rollup": "^4.27.0",
@@ -110,10 +114,9 @@
         "rollup-plugin-postcss": "^4.0.2",
         "storybook": "^8.4.1",
         "tslib": "^2.8.1",
-        "webpack": "^5.96.1",
-        "eslint": "^8.57.1",
-        "eslint-config-prettier": "^9.1.0",
-        "prettier": "^3.3.3"
+        "webpack": "^5.96.1"
     },
-    "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
+    "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee",
+    "dependencies": {
+    }
 }
