--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@toss/react": "^1.8.1",
         "@use-funnel/react-router-dom": "^0.0.7",
         "classnames": "^2.5.1",
         "date-fns": "^4.1.0",
@@ -40,8 +41,7 @@
         "react-hook-form": "^7.53.2",
         "react-icons": "^5.3.0",
         "styled-components": "^6.1.13",
-        "web-vitals": "^2.1.4",
-        "@toss/react": "^1.8.1"
+        "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -92,6 +92,7 @@
         "@storybook/react": "^8.4.1",
         "@storybook/react-webpack5": "^8.4.1",
         "@storybook/test": "^8.4.1",
+        "@types/ethereum-blockies": "^0.1.2",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.119",
         "@types/react": "^18.3.12",
@@ -118,5 +119,9 @@
     },
     "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee",
     "dependencies": {
+        "@economist/design-system": "^7.31.0",
+        "@mui/icons-material": "^6.1.10",
+        "ethereum-blockies": "^0.1.1",
+        "react-blockies": "^1.4.1"
     }
 }
