Request 컴포넌트 타입 수정
APIType에 맞게 수정

--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
         "@economist/design-system": "^7.31.0",
         "@fontsource/noto-sans-kr": "^5.1.0",
         "@mui/icons-material": "^6.1.10",
+        "api_spec": "file:../api_spec/api_spec-1.0.0.tgz",
         "ethereum-blockies": "^0.1.1",
         "react-blockies": "^1.4.1"
     }
