--- a/package.json
+++ b/package.json
@@ -123,7 +123,9 @@
         "@fontsource/noto-sans-kr": "^5.1.0",
         "@mui/icons-material": "^6.1.10",
         "api_spec": "file:../api_spec/api_spec-1.0.0.tgz",
+        "chart.js": "^4.4.7",
         "ethereum-blockies": "^0.1.1",
-        "react-blockies": "^1.4.1"
+        "react-blockies": "^1.4.1",
+        "react-chartjs-2": "^5.2.0"
     }
 }
